# trimodal-cad

./: .gitignore  README.md  new.tex
cad_recode_benchmark/: demo.ipynb  generate_model_cad.py  generate_pointclouds.py  run_cadrecode_batch.py  utils_generate_model.py
docs/: multimodal_cad_report.tex  references.bib
evaluation_data/: evaluation_dataset.ipynb
hw5/: Homework_5_AI_Agents.ipynb
hw5/agent_eval_outputs/: baseline_results.json  baseline_vs_custom_summary.json  custom_results.json  langfuse_instrumented_results.json  online_configuration_summary.json  online_custom_tools_max_steps_8.json  online_web_only_max_steps_6.json  safety_before_after.json
hybrid_multimodal_stack/: README.md  pyproject.toml  requirements.txt
hybrid_multimodal_stack/configs/: extracted_from_recode_notebook.yaml
hybrid_multimodal_stack/docs/: README_original.md
hybrid_multimodal_stack/examples/: forward_pass.py  run_forward_pass.sbatch
hybrid_multimodal_stack/outputs/: recode_point_encoder.pt
hybrid_multimodal_stack/scripts/: bootstrap_model.py  eval_best_of_8_iou.py  eval_forward_and_iou.py  extract_dinov2_base.py  extract_recode_point_encoder.py  run_eval_forward_and_iou.sbatch  train_multimodal.py  train_two_adapters_continue_latest.sbatch  train_two_adapters_orcd.sh  train_two_adapters_pi_faez_100h.sbatch  train_two_adapters_resume_300k.sbatch
hybrid_multimodal_stack/src/hybrid_multimodal_stack/: __init__.py  config.py  data.py  encoders.py  model.py  projectors.py  stages.py  utils.py
training_data/: cadevolve_py_to_img_pc.py  training_data.ipynb
